--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,18 @@
+collections:
+  staff:
+    output: true
+
 defaults:
   - scope:
       path: ""
       type: "posts"
     values:
       layout: "post"
+  - scope:
+      path: ""
+      type: "staff"
+    values:
+      layout: "staff"
   - scope:
       path: ""
     values:
