--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ defaults:
       type: "staff"
     values:
       layout: "staff"
+      title: "{{ page.displayname }}"
   - scope:
       path: ""
     values:
