--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-Language: ruby-2.4.4
+Language: ruby
 
 branches:
   only:
     - source
 rvm:
-  2.2.3
+  2.4.4
 
 before_script:
   - chmod +x ./script/cibuild
