--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,3 +1,17 @@
+- title: PB&J
+  ytid: VkYEVgmZJd8
+  date: 2019-03-31
+- title: The Lake in the Middle of the Ocean
+  ytid: D4HKAy-QrAU
+  btsid: DEexkKAn8MM
+  date: 2019-03-31
+- title: Lil' $ond@e
+  ytid: IZzQWeLo95U
+  btsid: f_9_JkKLXUA
+  date: 2019-03-31
+- title: It's Going to be Surreal
+  ytid: 5G9Eg5DoeM4
+  date: 2019-03-31
 - title: We have the room
   ytid: F5SP9RYFiPc
   date: 2018-03-28
