--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,10 +1,18 @@
+# ytid: youtube url
+# btsid: behind the scenes url
 - title: PB&J
   ytid: VkYEVgmZJd8
   date: 2019-03-31
+  honors:
+    - venue: CMF 2019
+      award: Jury Award
 - title: The Lake in the Middle of the Ocean
   ytid: D4HKAy-QrAU
   btsid: DEexkKAn8MM
   date: 2019-03-31
+  honors:
+    - venue: CMF 2019
+      award: Finalist
 - title: Lil' $ond@e
   ytid: IZzQWeLo95U
   btsid: f_9_JkKLXUA
@@ -15,12 +23,18 @@
 - title: We have the room
   ytid: F5SP9RYFiPc
   date: 2018-03-28
+  honors:
+    - venue: CMF 2018
+      award: Finalist
 - title: Pizza Party
   ytid: UWLsIRb7ces
   date: 2018-03-27
 - title: Good Boy
   ytid: f-t7wkGXrhA
   date: 2017-03-31
+  honors:
+    - venue: CMF 2017
+      award: Finalist
 - title: The Making of DogCat
   ytid: IhymhJMDYYI
   date: 2016-04-02
