--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ rvm:
   2.4.1
 
 before_script:
-  - bundle update --bundler
+  - gem install bundler:1.17.3
   - chmod +x ./script/cibuild
 
 script: ./script/cibuild
