--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ rvm:
 
 before_script:
   - gem install bundler:1.17.3
+  - bundle update --bundler
   - chmod +x ./script/cibuild
 
 script: ./script/cibuild
