--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 Language: ruby
+- cache: bundler
 
 branches:
   only:
@@ -7,8 +8,8 @@ rvm:
   2.4.1
 
 before_script:
-  - gem install bundler:1.17.3
-  - bundle update --bundler
+  - yes | gem update --system --force
+  - gem install bundler
   - chmod +x ./script/cibuild
 
 script: ./script/cibuild
